--- a/manifest.yml
+++ b/manifest.yml
@@ -7,3 +7,5 @@ applications:
       JBP_CONFIG_DEBUG: '{enabled: true}'
       WELCOME_MESSAGE: Hello from the review environment
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
+      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: '*'
+      MANAGEMENT_ENDPOINT_HEALTH_SHOWDETAILS: 'always'
