--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,5 @@ applications:
     routes:
       - route: 181651-pal-tracker.cfapps.io
     env:
-      WELCOME_MESSAGE: Hello from Cloud Foundry
+      WELCOME_MESSAGE: Hello from the review environment
       JBP_CONFItG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
