--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,7 +38,7 @@ jobs:
         name: pal-tracker
     - name: Deploy to cf
       run: |
-        cf login -a "https://api.run.pivotal.io" -o "uki-engineering" -s "GaneshmuthukumarGURUSAMY" -u "ganeshmuthukumar.g@cognizant.com" -p "Pas$w0rd"
+        cf login -a "https://api.run.pivotal.io" -o "uki-engineering" -s "GaneshmuthukumarGURUSAMY" -u "ganeshmuthukumar.g@cognizant.com" -p "Pas\$w0rd"
         cf push -p ./pal-tracker/pal-tracker.jar
       env:
         CF_API_URL: ${{ secrets.CF_API_URL }}
