--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 11
+        java-version: 11.0
     - name: Build with Gradle
       run: ./gradlew build
     - name: Publish artifact
@@ -38,7 +38,7 @@ jobs:
         name: pal-tracker
     - name: Deploy to cf
       run: |
-        cf login -a "https://api.run.pivotal.io" -o "uki-engineering" -s "GaneshmuthukumarGURUSAMY" -u "ganeshmuthukumar.g@cognizant.com" -p "Pas\$w0rd"
+        cf login -a "$CF_API_URL" -o "$CF_ORG" -s "$CF_SPACE" -u "$CF_USERNAME" -p "$CF_PASSWORD"
         cf push -p ./pal-tracker/pal-tracker.jar
       env:
         CF_API_URL: ${{ secrets.CF_API_URL }}
