--- a/manifest.yml
+++ b/manifest.yml
@@ -5,4 +5,4 @@ applications:
       - route: 181651-pal-tracker.cfapps.io
     env:
       WELCOME_MESSAGE: Hello from the review environment
-      JBP_CONFItG_OPEN_JDK_JRE: '{ jre: { version: 11.0 } }'
+      JBP_CONFItG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
