--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,16 @@ repositories {
     mavenCentral()
 }
 
+springBoot {
+    buildInfo()
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compile("org.springframework.boot:spring-boot-starter-web")
 
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation "mysql:mysql-connector-java:8.0.18"
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
